Fix #1110 Language toggle button in admin top bar visible also in fullscreen mode

--- a/themes/grav/scss/preset.scss
+++ b/themes/grav/scss/preset.scss
@@ -1434,7 +1434,7 @@ form {
 
 #admin-topbar {
     #admin-lang-toggle {
-        z-index: 2;
+        z-index: 3;
         button {
             @include button-color($update-bg);
         }
