--- a/themes/grav/scss/template/_pages.scss
+++ b/themes/grav/scss/template/_pages.scss
@@ -250,7 +250,7 @@
     }
 
     #admin-lang-toggle {
-        z-index:10;
+        z-index: 3;
         float: left;
         margin-right: 5px;
 
